overflow fix

--- a/button.scss
+++ b/button.scss
@@ -15,7 +15,7 @@
 .btn-bd-primary{
     --bs-btn-font-weight: 600;
     --bs-btn-color: rgb(18, 121, 253);
-    --bs-btn-bg: rgba(18, 120, 253, 0.089);
+    --bs-btn-bg: rgba(18, 120, 253, 0.041);
     --bs-btn-border-color: rgba(18, 120, 253, 0.863);
     --bs-btn-hover-color: rgb(14, 82, 172);
     --bs-btn-hover-bg: rgba(0, 0, 0, 0);
